# canistorage

./: Cargo.toml  README.md  build.sh  dfx.json
devlogs/: 2025-01-04_ProofOfConcept.md  2025-02-11_FileSystem.md  2025-02-24_Interface.md  2025-03-01_ICPHackathon2025Wave3.md  2025-03-03_FileInfo.md  2025-03-07_Flowchart.md  2025-03-14_moduration.md  2025-03-15_Canistorge.md  2025-03-25_Submit.md  2025-04-05_NextPlan.md  2025-05-05_canistorage-jsr.md  test.ts  wordlist.txt
src/: canistorage.did  canistorage.rs  lib.rs  transport.rs
