[package]
name = "canistorage"
version = "0.1.0"
edition = "2024"
authors = ["toshio"]
repository = "https://github.com/toshio/canistorage"
license = "MIT"
readme = "README.md"
description = "Canistorage"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-cdk-timers = "0.11.0"
ic-stable-structures = "0.6.7"
ic-wasi-polyfill = "0.7.0"
serde = "1.0.218"
serde_cbor = "0.11.2"
sha2 = "0.10.8"
