[package]
name = "canistorage"
version = "0.1.3"
edition = "2024"
authors = ["toshio"]
repository = "https://github.com/toshio/canistorage"
license = "MIT"
readme = "README.md"
description = "Canistorage"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
ic-cdk = "0.18.0"
ic-cdk-macros = "0.18.0"
ic-cdk-timers = "0.12.0"
ic-stable-structures = "0.6.8"
ic-wasi-polyfill = "0.8.1"
serde = "1.0.219"
serde_cbor = "0.11.2"
sha2 = "0.10.8"
